chrome: align loader correctly from the top

--- a/src/browser/extensions/chrome/css/theme-default.css
+++ b/src/browser/extensions/chrome/css/theme-default.css
@@ -138,6 +138,10 @@ BODY {
   left: -40px;
 }
 
+#sd-folder-explorer .sd-loading {
+  top: 173px;
+}
+
 .sd-empty {
   display: none;
   position: absolute;
